<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@mipmap/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="10dp"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/main"
                android:id="@+id/main"
                android:contentDescription="@string/main_image" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/header"
                android:id="@+id/header"
                android:contentDescription="@string/main_image" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp">
            <NumberPicker
                android:id="@+id/lessonPicker"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:scaleX="0.75"
                android:scaleY="0.75"
                android:theme="@style/NumberPickerText" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp">
            <Button
                android:id="@+id/spellButton"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginBottom="1dp"
                android:background="#FF5722"
                android:text="@string/action_spelling"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/spellProgress"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginBottom="10dp"
                android:textColor="#00008B" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Button
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:text="@string/action_meanings"
                android:id="@+id/meaningButton"
                android:textSize="15sp"
                android:layout_marginBottom="1dp"
                android:textAllCaps="false"
                android:background="#01579B"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:id="@+id/meaningProgress"
                android:layout_marginBottom="10dp"
                android:textColor="#00008B" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Button
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:text="@string/action_glossary"
                android:id="@+id/glossaryButton"
                android:textSize="15sp"
                android:layout_marginBottom="1dp"
                android:textAllCaps="false"
                android:background="#006400"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:id="@+id/glossaryProgress"
                android:layout_marginBottom="10dp"
                android:textColor="#00008B" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Button
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:text="@string/action_sentence"
                android:id="@+id/sentenceButton"
                android:textSize="15sp"
                android:layout_marginBottom="1dp"
                android:textAllCaps="false"
                android:background="#FF5722"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:id="@+id/sentenceProgress"
                android:layout_marginBottom="10dp"
                android:textColor="#00008B"
                />
        </TableRow>

    </TableLayout>
</ScrollView>